# Jira_extension_for_cursor

./: .gitignore  LICENSE  README.md  jira-mcp-cursor.code-workspace  pyproject.toml
